@@ -223,13 +223,17 @@ static inline get_pixel_func get_pixel_func_ptr(uint32_t format) {
 gdx2d_pixmap* gdx2d_load(const unsigned char *buffer, uint32_t len, uint32_t req_format) {
 	int32_t width, height, format;
 	// TODO fix this! Add conversion to requested format
+
 	if(req_format > GDX2D_FORMAT_RGBA8888) 
 		req_format = GDX2D_FORMAT_RGBA8888;
 
 	const unsigned char* pixels = stbi_load_from_memory(buffer, len, &width, &height, &format, req_format);
-	if (pixels == NULL && stbi_unsupported_format() == 1)
-		pixels = jpgd_decompress_jpeg_image_from_memory(buffer, len, &width, &height, &format, 3); // FIXME Currently only rgb format works
-	if(pixels == NULL)
+	if (pixels == NULL && stbi_unsupported_format() == 1) {
+		if (!req_format)
+			req_format = 3;
+		pixels = jpgd_decompress_jpeg_image_from_memory(buffer, len, &width, &height, &format, req_format);
+	}
+	if (pixels == NULL)
 		return NULL;
 
 	gdx2d_pixmap* pixmap = (gdx2d_pixmap*)malloc(sizeof(gdx2d_pixmap));
